# phil

./: AGENTS.md  CHANGELOG.md  CONTRIBUTOR.md  DESIGN.md  KNOWLEDGE.md  LICENSE  README.md  TUTORIAL.md  calc  phil  pyproject.toml
.github/workflows/: ci.yml  release.yml
release-notes/: TEMPLATE.md  v0.3.0-draft.md  v0.4.0-draft.md
scripts/: checks.sh  release.sh  release_notes.sh
src/calc/: __main__.py  cli.py  core.py  diagnostics.py  ode.py  repl.py  updates.py
tests/: conftest.py  test_cli.py  test_cli_unit.py  test_core.py  test_diagnostics.py  test_ode.py  test_properties.py  test_regression.py  test_updates.py
