[project]
name = "phil"
version = "0.1.0"
description = "Minimal symbolic CLI calculator powered by SymPy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "sympy>=1.12",
]

[project.scripts]
phil = "calc.cli:run"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calc"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
