[project]
name = "philcalc"
dynamic = ["version"]
description = "Minimal symbolic CLI calculator powered by SymPy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "sympy>=1.12",
]

[project.scripts]
phil = "calc.cli:run"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "hypothesis>=6.100",
]

[build-system]
requires = ["hatchling>=1.24.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.hatch.build.targets.wheel]
packages = ["src/calc"]

[tool.pytest.ini_options]
addopts = "-q -ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = [
  "unit: fast unit tests",
  "integration: CLI and process-level tests",
  "regression: high-value bug regression tests",
]
